# chat-service

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.dev.conf  nginx.prod.conf  output  prometheus.yml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yaml
cmake/: coverage.cmake  jwt.cmake
configs/: config_vars.testing.yaml  config_vars.yaml  config_vars_docker.yaml  dynamic_config.yaml  dynamic_config_fallback.json  static_config.yaml
docs/: agent_context.md  api.yaml  load-testing.md  metrics.md
grafana/dashboards/: chat-server.json  userver.json
grafana/provisioning/dashboards/: dashboards.yaml
postgresql/data/: chat.sql
postgresql/schemas/: chat_db.sql
scripts/: coverage.sh
src/: benchmarks_main.cpp  components.cpp  components.hpp  greeting.cpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_postgres.cpp  hello_postgres.hpp  main.cpp
src/app/: exceptions.hpp
src/app/dto/: check_token_dto.hpp  registration_dto.hpp  user_profile_dto.hpp
src/app/services/: user_service.cpp  user_service.hpp
src/benchmarks/: main.cpp
src/core/: chat.hpp  exceptions.hpp  ids.hpp
src/core/chats/: chat.hpp  chat_id_format.hpp  chat_repo.hpp  participants_provider.hpp  private_chat.cpp  private_chat.hpp
src/core/common/: exceptions.hpp  ids.hpp
src/core/messaging/: chat_member.hpp  mailbox.cpp  mailbox.hpp  mailbox_registry.hpp  mailbox_test.cpp  message.cpp  message.hpp  message_queue.hpp  mocks.hpp  send_limiter.hpp
src/core/repositories/: user_repo.hpp
src/core/services/: auth_service_interface.hpp
src/core/user/: user.cpp  user.hpp
src/core/users/: auth_service_interface.hpp  profile.hpp  user.cpp  user.hpp  user_repo.hpp  user_test.cpp
src/core/value_objects/: username.hpp  username_test.cpp
src/handlers/: handler_exceptions.cpp  handler_exceptions.hpp
src/handlers/auth/: auth_bearer.cpp  auth_bearer.hpp
src/handlers/messages/: send_message_handler.cpp  send_message_handler.hpp
src/handlers/users/: get_by_username_handler.cpp  get_by_username_handler.hpp  user_register_handler.cpp  user_register_handler.hpp
src/infra/auth/: auth_service_impl.cpp  auth_service_impl.hpp  auth_service_test.cpp
src/infrastructure/: mpsc_queue_wrapper.hpp
src/util/: strong_typedef.hpp
src/utils/: strong_typedef.hpp  validator.hpp
src/utils/jwt/: jwt.cpp  (+2 more)
tests/: conftest.py  pytest.ini  requirements.txt  test_basic.py  test_postgres.py
tests/chats/: test_group.py  test_private.py
tests/helpers/: endpoints.py  models.py  utils.py  validators.py
tests/messages/: conftest.py  test_poll.py  test_send.py  test_session.py
tests/users/: test_delete_user.py  test_get_user.py  test_login.py  test_register.py  test_update_user.py
www/: asset-manifest.json  index.html
(+307 files in other folders)
